--- a/styles.css
+++ b/styles.css
@@ -59,10 +59,7 @@ label[for="batch"] {
     color: #333;  /* Slightly bigger */
 }
 
-#admin-section {
-    margin: 40% auto;
-    transform: translateY(-80%);
-}
+
 
 .logoutbtn:hover {
     background-color: rgb(39, 28, 28);
@@ -157,6 +154,8 @@ label[for="batch"] {
 
 /* Admin section */
 #admin-section {
+    margin: 100px auto;
+    /* transform: translateY(-80%); */
   background: white;
   padding: 20px;
   max-width: 1200px;
